--- a/styleguide/grid.html
+++ b/styleguide/grid.html
@@ -77,6 +77,110 @@
                         <main>
                             <section role="region" id="toc-grid">
                                 <article id="standard-grid-unit" role="region">
+                                    <h3>No gutters</h3>
+                                    <section id="single-row" role="grid">
+                                        <div role="gridcell">
+                                            <section>
+                                                <div>
+                                                    <h3>Box 1</h3>
+                                                    <p>Sample box #1</p>
+                                                </div>
+                                            </section>
+                                        </div>
+                                        <div role="gridcell">
+                                            <section>
+                                                <div>
+                                                    <h3>Box 2</h3>
+                                                    <p>Sample box #2</p>
+                                                </div>
+                                            </section>
+                                        </div>
+                                        <div role="gridcell">
+                                            <section>
+                                                <div>
+                                                    <h3>Box 3</h3>
+                                                    <p>Sample box #3</p>
+                                                </div>
+                                            </section>
+                                        </div>
+                                        <div role="gridcell">
+                                            <section>
+                                                <div>
+                                                    <h3>Box 4</h3>
+                                                    <p>Sample box #1</p>
+                                                </div>
+                                            </section>
+                                        </div>
+                                        <div role="gridcell">
+                                            <section>
+                                                <div>
+                                                    <h3>Box 5</h3>
+                                                    <p>Sample box #2</p>
+                                                </div>
+                                            </section>
+                                        </div>
+                                        <div role="gridcell">
+                                            <section>
+                                                <div>
+                                                    <h3>Box 6</h3>
+                                                    <p>Sample box #3</p>
+                                                </div>
+                                            </section>
+                                        </div>
+                                    </section>
+                                </article>
+                                <article id="standard-grid-unit" role="region">
+                                    <h3>Push and pull</h3>
+                                    <p role="definition">Push and pull are not necessary in a single column mobile layout. This feature isn't supported in flexbox anyway.</p>
+                                    <section id="push-pull" role="grid">
+                                        <div role="gridcell">
+                                            <section>
+                                                <div>
+                                                    <h3>Box 1</h3>
+                                                    <p>Sample box #1</p>
+                                                </div>
+                                            </section>
+                                        </div>
+                                        <div role="gridcell">
+                                            <section>
+                                                <div>
+                                                    <h3>Box 2</h3>
+                                                    <p>Sample box #2</p>
+                                                </div>
+                                            </section>
+                                        </div>
+                                    </section>
+                                </article>
+                                <article id="standard-grid-unit" role="region">
+                                    <h3>Single row in reverse</h3>
+                                    <section id="single-row-reverse" role="grid">
+                                        <div role="gridcell">
+                                            <section>
+                                                <div>
+                                                    <h3>Box 1</h3>
+                                                    <p>Sample box #1</p>
+                                                </div>
+                                            </section>
+                                        </div>
+                                        <div role="gridcell">
+                                            <section>
+                                                <div>
+                                                    <h3>Box 2</h3>
+                                                    <p>Sample box #2</p>
+                                                </div>
+                                            </section>
+                                        </div>
+                                        <div role="gridcell">
+                                            <section>
+                                                <div>
+                                                    <h3>Box 3</h3>
+                                                    <p>Sample box #3</p>
+                                                </div>
+                                            </section>
+                                        </div>
+                                    </section>
+                                </article>
+                                <article id="standard-grid-unit" role="region">
                                     <h3>Gutters</h3>
                                     <section id="single-gutters" role="grid">
                                         <div role="gridcell">
@@ -138,99 +242,9 @@
                                     </section>
                                 </article>
                                 <article id="standard-grid-unit" role="region">
-                                    <h3>No gutters</h3>
-                                    <section id="single-row" role="grid">
-                                        <div role="gridcell">
-                                            <section>
-                                                <div>
-                                                    <h3>Box 1</h3>
-                                                    <p>Sample box #1</p>
-                                                </div>
-                                            </section>
-                                        </div>
-                                        <div role="gridcell">
-                                            <section>
-                                                <div>
-                                                    <h3>Box 2</h3>
-                                                    <p>Sample box #2</p>
-                                                </div>
-                                            </section>
-                                        </div>
-                                        <div role="gridcell">
-                                            <section>
-                                                <div>
-                                                    <h3>Box 3</h3>
-                                                    <p>Sample box #3</p>
-                                                </div>
-                                            </section>
-                                        </div>
-                                        <div role="gridcell">
-                                            <section>
-                                                <div>
-                                                    <h3>Box 4</h3>
-                                                    <p>Sample box #1</p>
-                                                </div>
-                                            </section>
-                                        </div>
-                                        <div role="gridcell">
-                                            <section>
-                                                <div>
-                                                    <h3>Box 5</h3>
-                                                    <p>Sample box #2</p>
-                                                </div>
-                                            </section>
-                                        </div>
-                                        <div role="gridcell">
-                                            <section>
-                                                <div>
-                                                    <h3>Box 6</h3>
-                                                    <p>Sample box #3</p>
-                                                </div>
-                                            </section>
-                                        </div>
-                                    </section>
-                                </article>
-                                <article id="standard-grid-unit" role="region">
-                                    <h3>No gutters, single row</h3>
-                                    <section id="single-row" role="grid">
-                                        <div role="gridcell">
-                                            <section>
-                                                <div>
-                                                    <h3>Box 1</h3>
-                                                    <p>Sample box #1</p>
-                                                </div>
-                                            </section>
-                                        </div>
-                                        <div role="gridcell">
-                                            <section>
-                                                <div>
-                                                    <h3>Box 2</h3>
-                                                    <p>Sample box #2</p>
-                                                </div>
-                                            </section>
-                                        </div>
-                                        <div role="gridcell">
-                                            <section>
-                                                <div>
-                                                    <h3>Box 3</h3>
-                                                    <p>Sample box #3</p>
-                                                </div>
-                                            </section>
-                                        </div>
-                                        <div role="gridcell">
-                                            <section>
-                                                <div>
-                                                    <h3>Box 4</h3>
-                                                    <p>Sample box #4</p>
-                                                </div>
-                                            </section>
-                                        </div>
-                                    </section>
-                                </article>
-                                <article id="standard-grid-unit" role="region">
-                                    <h3>No gutters, push and pull</h3>
+                                    <h3>Gutters, push and pull</h3>
                                     <p role="definition">Push and pull are not necessary in a single column mobile layout. This feature isn't supported in flexbox anyway.</p>
-                                    <section id="push-pull" role="grid">
+                                    <section id="push-pull-gutters" role="grid">
                                         <div role="gridcell">
                                             <section>
                                                 <div>
