--- a/styleguide/grid.html
+++ b/styleguide/grid.html
@@ -83,7 +83,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 1</h3>
-                                                    <p>Sample box #1</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -91,7 +90,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 2</h3>
-                                                    <p>Sample box #2</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -99,7 +97,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 3</h3>
-                                                    <p>Sample box #3</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -107,7 +104,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 4</h3>
-                                                    <p>Sample box #1</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -115,7 +111,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 5</h3>
-                                                    <p>Sample box #2</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -123,7 +118,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 6</h3>
-                                                    <p>Sample box #3</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -137,7 +131,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 1</h3>
-                                                    <p>Sample box #1</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -145,7 +138,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 2</h3>
-                                                    <p>Sample box #2</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -158,7 +150,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 1</h3>
-                                                    <p>Sample box #1</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -166,7 +157,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 2</h3>
-                                                    <p>Sample box #2</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -174,7 +164,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 3</h3>
-                                                    <p>Sample box #3</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -249,7 +238,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 1</h3>
-                                                    <p>Sample box #1</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -257,7 +245,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 2</h3>
-                                                    <p>Sample box #2</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -270,7 +257,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 1</h3>
-                                                    <p>Sample box #1</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -278,7 +264,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 2</h3>
-                                                    <p>Sample box #2</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -286,7 +271,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 3</h3>
-                                                    <p>Sample box #3</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -300,7 +284,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 1</h3>
-                                                    <p>Sample box #1</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -308,7 +291,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 2</h3>
-                                                    <p>Sample box #2</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -316,7 +298,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 3</h3>
-                                                    <p>Sample box #3</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -324,7 +305,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 4</h3>
-                                                    <p>Sample box #4</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -332,7 +312,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 5</h3>
-                                                    <p>Sample box #5</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -340,7 +319,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 6</h3>
-                                                    <p>Sample box #6</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -375,13 +353,40 @@
                                     </section>
                                 </article>
                                 <article id="standard-grid-unit" role="region">
+                                    <h3>Gutters, full-height and centered grid</h3>
+                                    <p role="definition">Equal heights are not necessary in a single column mobile layout. This feature isn't supported in flexbox anyway.</p>
+                                    <section id="single-gutters-centered" role="grid">
+                                        <div role="gridcell">
+                                            <section role="presentation">
+                                                <div>
+                                                    <h3>Box 1</h3>
+                                                </div>
+                                            </section>
+                                        </div>
+                                        <div role="gridcell">
+                                            <section role="presentation">
+                                                <div>
+                                                    <h3>Box 2</h3>
+                                                </div>
+                                            </section>
+                                        </div>
+                                        <div role="gridcell">
+                                            <section role="presentation">
+                                                <div>
+                                                    <h3>Box 3</h3>
+                                                    <p>Sample box #3</p>
+                                                </div>
+                                            </section>
+                                        </div>
+                                    </section>
+                                </article>
+                                <article id="standard-grid-unit" role="region">
                                     <h3>Gutters, nested grids</h3>
                                     <section id="single-gutters-nested" role="grid">
                                         <div role="gridcell">
                                             <section>
                                                 <div>
                                                     <h3>Box 1</h3>
-                                                    <p>Sample box #1</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -389,7 +394,6 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 2</h3>
-                                                    <p>Sample box #2</p>
                                                 </div>
                                             </section>
                                         </div>
@@ -397,13 +401,12 @@
                                             <section>
                                                 <div>
                                                     <h3>Box 3</h3>
-                                                    <p>Sample box #3</p>
+                                                    <p>Nested content</p>
                                                     <article id="nested1" role="grid">
                                                         <div role="gridcell">
                                                             <section>
                                                                 <div>
                                                                     <h3>Box 1</h3>
-                                                                    <p>Sample box #1</p>
                                                                 </div>
                                                             </section>
                                                         </div>
@@ -411,7 +414,6 @@
                                                             <section>
                                                                 <div>
                                                                     <h3>Box 2</h3>
-                                                                    <p>Sample box #2</p>
                                                                 </div>
                                                             </section>
                                                         </div>
@@ -421,7 +423,6 @@
                                                             <section>
                                                                 <div>
                                                                     <h3>Box 1</h3>
-                                                                    <p>Sample box #1</p>
                                                                 </div>
                                                             </section>
                                                         </div>
@@ -429,7 +430,6 @@
                                                             <section>
                                                                 <div>
                                                                     <h3>Box 2</h3>
-                                                                    <p>Sample box #2</p>
                                                                 </div>
                                                             </section>
                                                         </div>
