Fieldset last child no bottom margin

--- a/styleguide/styleguide.html
+++ b/styleguide/styleguide.html
@@ -1053,7 +1053,8 @@
                                 </article>
 
                                 <article id="form-unit">
-                                    <form role="form">
+                                    <form
+                                    >
                                         <section id="form-fields" role="grid">
                                             <div role="gridcell">
                                                 <h3>Checkbox list</h3>
