Image and video styling for mobile

--- a/styleguide/styleguide.html
+++ b/styleguide/styleguide.html
@@ -275,8 +275,10 @@
                                 </h2>
                                 <article id="media-examples" role="grid">
                                     <div role="gridcell">
-                                        <div role="video">
-                                            <iframe src="https://www.youtube.com/embed/us6ZcvCcYoo?rel=0&autohide=2&modestbranding=1&theme=light&color=white" frameborder="0" allowfullscreen></iframe>
+                                        <div class="video-wrapper">
+                                            <div role="video">
+                                                <iframe src="https://www.youtube.com/embed/us6ZcvCcYoo?rel=0&autohide=2&modestbranding=1&theme=light&color=white" frameborder="0" allowfullscreen></iframe>
+                                            </div>
                                         </div>
                                     </div>
                                     <div role="gridcell">
@@ -298,7 +300,9 @@
                                         </p>
                                     </div>
                                     <div role="gridcell">
-                                        <img src="images/hunt-for-the-wilderpeople.jpg" />
+                                        <div class="image-wrapper">
+                                            <img src="images/hunt-for-the-wilderpeople.jpg" />
+                                        </div>
                                     </div>
                                 </article>
                                 <nav role="link">
@@ -1053,8 +1057,7 @@
                                 </article>
 
                                 <article id="form-unit">
-                                    <form
-                                    >
+                                    <form>
                                         <section id="form-fields" role="grid">
                                             <div role="gridcell">
                                                 <h3>Checkbox list</h3>
