Centered grid property changes to allow for content alignment

--- a/styleguide/styleguide.html
+++ b/styleguide/styleguide.html
@@ -803,7 +803,7 @@
                                     </section>
                                 </article>
                                 <article id="standard-grid-unit" role="region">
-                                    <h3>Gutters, full-height and centered grid</h3>
+                                    <h3>Gutters, full-height and vertically centered grid</h3>
                                     <p role="definition">Equal heights are not necessary in a single column mobile layout. This feature isn't supported in flexbox anyway.</p>
                                     <section id="single-gutters-centered" role="grid">
                                         <div role="gridcell">
