Added currency field type

--- a/styleguide/styleguide.html
+++ b/styleguide/styleguide.html
@@ -994,6 +994,12 @@
                                                         <input type="number" pattern="[0-9]*" placeholder="Enter a Number" id="text">
                                                     </div>
                                                 </fieldset>
+                                                <fieldset>
+                                                    <label for="text">Currency input</label>
+                                                    <div role="textbox" currency>
+                                                        <span>$</span><input type="number" pattern="[0-9]*" placeholder="Enter a dollar amount" id="text">
+                                                    </div>
+                                                </fieldset>
                                             </div>
                                             <div role="gridcell">
                                                 <h3>Multiline text input</h3>
