Currency input now collapses whitespace

--- a/styleguide/styleguide.html
+++ b/styleguide/styleguide.html
@@ -618,7 +618,8 @@ Hello, World!
                                 <fieldset>
                                     <label for="text">Currency input</label>
                                     <div role="textbox" currency>
-                                        <span>$</span><input type="number" pattern="[0-9]*" placeholder="Enter a dollar amount" id="text">
+                                        <span>$</span>
+                                        <input type="number" pattern="[0-9]*" placeholder="Enter a dollar amount" id="text">
                                     </div>
                                 </fieldset>
                             </div>
